--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header class="anim1">
          <div class="anim2"><h1>SHANAWAJ NADAF</h1>
-             <a class="col" href="/shan.html"><p>FrontEnd Developer | CSE Student</p></a>      
+             <a class="col" href="shan.html"><p>FrontEnd Developer | CSE Student</p></a>      
         </div>
     </header>
 </body>
