--- a/shan.html
+++ b/shan.html
@@ -32,7 +32,7 @@
 </p>
  </div>
     </section>
- <div class="butt"><a href="/shane.html"><button type="button">KNOW ME BETTER</button></a></div>
+ <div class="butt"><a href="shane.html"><button type="button">KNOW ME BETTER</button></a></div>
 
    </main>
 </body>
